docs: Enhance Android README with build requirements, troubleshooting, and structure
- Add Build Requirements section with JDK 17+, Android SDK/NDK, and Gradle prerequisites
- Add environment setup instructions for JAVA_HOME and PATH
- Enhance command line build instructions with multiple gradle tasks (test, clean, installDebug)
- Add detailed troubleshooting section for common build issues (SDK location, Gradle sync, memory, Python/Chaquo)
- Add Code Organization table documenting project structure (src, res, apollo, build.gradle, proguard-rules.pro)
- Fix GitHub issue tracker link to point to main frostwire repo instead of separate frostwire-android repo
- Add Windows gradle.bat reference for consistency with desktop README

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>