@@ -16,7 +16,7 @@ The FrostWire team is an active contributor to libtorrent and jlibtorrent always
 
 - **Do not repeat yourself**. Re-use your own code and our code. It'll be faster to code, and easier to maintain.
 
-- If you want to help, [Issue tracker](https://github.com/frostwire/frostwire-android/issues) is a good place to take a look at.
+- If you want to help, [Issue tracker](https://github.com/frostwire/frostwire/issues) is a good place to take a look at.
 
 - Try to follow our coding style and formatting before submitting a patch.
  
@@ -29,6 +29,30 @@ The FrostWire team is an active contributor to libtorrent and jlibtorrent always
 - We prefer well named methods and code re-usability than a lot of comments. Code should be self-explanatory.
 
 Becoming a core collaborator with direct commit access to the upstream repository will only happen after we have received lots of great patches and we get to know you better.
+
+
+# Build Requirements
+
+Pre-requisites:
+
+* **JDK 17 or later** ([OpenJDK](http://openjdk.java.net/) or [Oracle JDK](http://www.oracle.com/technetwork/java/index.html))
+* **Android SDK** - Minimum API 26 (Android 8.0 Oreo), Target API 34 (Android 14)
+* **Android NDK** (for native library compilation if building from source)
+* **Gradle** (included with the `gradlew` Gradle Wrapper script)
+* **Git** to clone and version control the project
+
+Make sure your `JAVA_HOME` and `PATH` environment variables are set correctly.
+
+Example on a Linux/Mac system's `.bashrc` or `.zshrc` file:
+
+```bash
+export JAVA_HOME=/path/to/jdk17
+export PATH=${PATH}:${JAVA_HOME}/bin
+```
+
+For Android SDK, you can download it via [Android Studio](https://developer.android.com/studio/) or as standalone tools.
+
+We recommend using [Android Studio](https://developer.android.com/studio/) as your development environment (it handles most configuration automatically).
 
 
 # Submitting Pull Requests
@@ -66,11 +90,82 @@ git rebase master
 
 ## Command line
 
+To build a debug APK:
+
 ```bash
 ./gradlew assembleDebug
 ```
 
-Happy coding.
+The built APK will be located at `build/outputs/apk/debug/`.
+
+To run tests:
+
+```bash
+./gradlew test
+```
+
+To clean build artifacts:
+
+```bash
+./gradlew clean
+```
+
+To install and run on a connected device or emulator:
+
+```bash
+./gradlew installDebug
+```
+
+For more build options:
+
+```bash
+./gradlew tasks
+```
+
+On Windows, use `gradlew.bat` instead of `./gradlew`.
+
+Happy coding!
+
+## Troubleshooting
+
+### Build fails with "SDK location not found"
+
+Make sure you have Android SDK properly installed and the `ANDROID_SDK_ROOT` or `ANDROID_HOME` environment variable set:
+
+```bash
+export ANDROID_SDK_ROOT=/path/to/android/sdk
+# or
+export ANDROID_HOME=/path/to/android/sdk
+```
+
+### Gradle sync issues in Android Studio
+
+1. Go to **File → Invalidate Caches / Restart**
+2. Select **Invalidate and Restart**
+3. Wait for the project to re-index
+
+### Out of memory errors during build
+
+Increase Gradle heap size in `gradle.properties`:
+
+```properties
+org.gradle.jvmargs=-Xmx2560m -XX:+UseParallelGC --enable-native-access=ALL-UNNAMED
+```
+
+### Python/Chaquo build errors
+
+FrostWire Android uses Chaquo for Python integration. Ensure you have Python 3 installed on your system.
+
+# Code Organization
+
+| Location        | Contains    |
+| ------------- |:-------------:|
+| **src/main/java/com/frostwire/**     | Core FrostWire functionality (search, downloads, media management). |
+| **src/main/java/com/limegroup/**      | Legacy code from LimeWire origins. |
+| **res/** | Android resources (layouts, strings, drawables, etc). |
+| **apollo/** | Apollo music player library integration. |
+| **build.gradle** | Project dependencies and build configuration. |
+| **proguard-rules.pro** | ProGuard/R8 obfuscation rules for release builds. |
 
 # Download
 
